sqlite3_enable_shared_cache is deprecated
Hi.
Evolution-data-server by default trying to use sqlite3_enable_shared_cache
but it is deprecated in current version of sqlite https://www.sqlite.org/sharedcache.html
Sqlite has option to remove the obsolete shared cache mode with results in a less size and better performance https://www.sqlite.org/compile.html#omit_shared_cache
Some distributions already compile sqlite without this option, which causes an evolution-data-server build error like this:
ld.lld: error: undefined symbol: sqlite3_enable_shared_cache
DEBUG util.py:446: >>> referenced by camel-db.c:450 (/builddir/build/BUILD/evolution-data-server-3.50.2/src/camel/camel-db.c:450)
DEBUG util.py:446: >>> lto.tmp:(init_sqlite_vfs)
Similar bug report was reported to other gnome project like tracker tracker#411 (closed)
Edited by Damian Marcin Szymański