I#507 - sqlite3_enable_shared_cache is deprecated

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/507